--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <title>Super Hero Theme Park - Home</title>
     <meta charset="UTF-8" />
     <meta name="author" content="Tim Little, Anand Tsogtbaatar, Ashfaq Anaz" />
-    <meta name="refresh" content="300" />
     <meta name="description" content="Super Hero Theme Park" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="keywords"
       content="Super Hero Theme Park, Theme Park, Super Hero, Rides, Roller Coaster"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
 
   <body>
