--- a/Explore.html
+++ b/Explore.html
@@ -1,61 +1,63 @@
 <html>
-    <head>
-        <title>Superhero Theme Park - Explore</title>
-        <meta charset="UTF-8" />
-        <meta name="author" content="Tim Little, Anand Tsogtbaatar, Ashfaq Anaz" />
-        <meta name="description" content="Super Hero Theme Park" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta
-          name="keywords"
-          content="Super Hero Theme Park, Theme Park, Super Hero, Rides, Roller Coaster"
-        />
-        <link rel="stylesheet" href="css/styles.css" />
-    </head>
-    <body>
-        <nav>
-          <div id="logo-cart"><p>Logo</p></div>
-          <div id="nav-text">
-            <p>Navigation bar </p>
-          </div>
-        </nav>
-        <header>
-            <h1>Superhero Theme park Explore</h1>
-        </header>
-        <section>
-            <article id="Explore">Superhero rides
-            </article>
-            <article id="Explore">
-                Show Times
-            </article>
-            <article id="Explore">
-            Restaurants
-            </article>
-            <article id="Explore">
-                Shops
-            </article>
-        </section>
-        <section>
-        <article id= "Exploretitle">
-            <div id="Title">Title</div> 
-            <div id="Information"> Information</div>
-            <div id="Title">Title</div>
-            <div id="Information"> Information</div>
-            <div id="Title">Title</div>
-            <div id="Information"> Information</div>
-            <div id="Title">Title</div>
-            <div id="Information"> Information</div>
-            <div id="Title">Title</div>
-            <div id="Information"> Information</div>
-            </article></section>
-        <nav>
-          <div id="nav-text">
-            <p>Navigation Bar</p>
-          </div>
-        </nav>
-        <footer>
-          Footer
-        </footer>
-
-    </body>
-
+  <head>
+    <title>Superhero Theme Park - Explore</title>
+    <meta charset="UTF-8" />
+    <meta name="author" content="Tim Little, Anand Tsogtbaatar, Ashfaq Anaz" />
+    <meta name="description" content="Super Hero Theme Park" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="Super Hero Theme Park, Theme Park, Super Hero, Rides, Roller Coaster"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
+    <nav>
+      <div id="logo-cart"><p>Logo</p></div>
+      <div id="nav-text">
+        <p>Navigation bar</p>
+      </div>
+    </nav>
+    <div class="directory">
+      <a href="./index.html">Home</a>
+      <a href="tickets.html">Tickets</a>
+    </div>
+    <header>
+      <h1>Superhero Theme park Explore</h1>
+    </header>
+    <section>
+      <article id="Explore">Superhero rides</article>
+      <article id="Explore">
+        Show Times
+      </article>
+      <article id="Explore">
+        Restaurants
+      </article>
+      <article id="Explore">
+        Shops
+      </article>
+    </section>
+    <section>
+      <article id="Exploretitle">
+        <div id="Title">Title</div>
+        <div id="Information">Information</div>
+        <div id="Title">Title</div>
+        <div id="Information">Information</div>
+        <div id="Title">Title</div>
+        <div id="Information">Information</div>
+        <div id="Title">Title</div>
+        <div id="Information">Information</div>
+        <div id="Title">Title</div>
+        <div id="Information">Information</div>
+      </article>
+    </section>
+    <nav>
+      <div id="nav-text">
+        <p>Navigation Bar</p>
+      </div>
+    </nav>
+    <footer>
+      Footer
+    </footer>
+  </body>
 </html>
