--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <!-- head of webpage -->
   <head>
+    <!--Set the title-->
     <title>Super Hero Theme Park - Home</title>
     <meta charset="UTF-8" />
     <meta name="author" content="Tim Little, Anand Tsogtbaatar, Ashfaq Anaz" />
@@ -10,51 +12,74 @@
       name="keywords"
       content="Super Hero Theme Park, Theme Park, Super Hero, Rides, Roller Coaster"
     />
+    <!-- CSS import -->
     <link rel="stylesheet" href="css/styles.css" />
   </head>
 
   <body>
-    <!-- Should the navbar always have cart? -->
+    <!-- Add common navigation bar to the top of the page -->
     <nav>
-      <div id="logo-cart"><p>Logo</p></div>
-      <div id="nav-text">
+      <!-- <div class="logo-cart"><p>Logo</p></div> -->
+      <img
+        class="logo-cart"
+        alt="Superhero World Logo"
+        src="images/logo.png"
+        width="150"
+        height="75"
+      />
+      <div class="nav-text">
         <p>Navbar with Logo</p>
       </div>
-      <div id="logo-cart">
+      <div class="logo-cart">
         <p>Cart</p>
       </div>
     </nav>
-    <div id="home-img">
-      <header id="home-img-title">Landing Image</header>
-      <p id="animation">Slider Animation</p>
+    <div class="directory">
+      <a href="tickets.html">Tickets</a>
+      <a href="Explore.html">Explore</a>
     </div>
-    <section id="browse-one">
-      <div id="browse-one-content">
+    <div id="home-img">
+      <img
+        id="home-img-title"
+        src="./images/rollercoaster.jpg"
+        alt="Landing Image"
+      />
+      <!-- <p id="animation">Slider Animation</p> -->
+    </div>
+    <article id="browse-one">
+      <div class="browse-one-content">
         <p>Superhero Rides</p>
+        <img src="" alt="Roller Coaster Picture" />
       </div>
-      <div id="browse-one-content">
+      <div class="browse-one-content">
         <p>Restaurants</p>
+        <img src="" alt="Restaurant Picture" />
       </div>
-      <div id="browse-one-content">
+      <div class="browse-one-content">
         <p>Tickets</p>
+        <img src="" alt="Tickets Picture" />
       </div>
-      <div id="browse-one-content">
+      <div class="browse-one-content">
         <p>Schedule</p>
+        <img src="" alt="Theme Park Picture" />
       </div>
-    </section>
-    <section id="browse-two">
-      <div id="browse-two-content">
+    </article>
+    <article id="browse-two">
+      <div class="browse-two-content">
         <p>Rides</p>
+        <img src="" alt="Rides Picture" />
       </div>
-      <div id="browse-two-content">
+      <div class="browse-two-content">
         <p>Events</p>
+        <img src="" alt="Events Picture" />
       </div>
-      <div id="browse-two-content">
+      <div class="browse-two-content">
         <p>Restaurants</p>
+        <img src="" alt="Restaurant Picture" />
       </div>
-    </section>
+    </article>
     <nav>
-      <div id="nav-text">
+      <div class="nav-text">
         <p>Navbar</p>
       </div>
     </nav>
