bugs fixed, images added, css cleaned

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </nav>
     <div class="directory">
       <a href="tickets.html">Tickets</a>
-      <a href="Explore.html">Explore</a>
+      <a href="explore.html">Explore</a>
     </div>
     <div id="home-img">
       <img
@@ -48,34 +48,38 @@
     </div>
     <article id="browse-one">
       <div class="browse-one-content">
-        <p>Superhero Rides</p>
-        <img src="" alt="Roller Coaster Picture" />
+        <h2>Superhero Rides</h2>
+        <img
+          src="./images/superhero.png"
+          alt="Roller Coaster Picture"
+          width="150"
+        />
       </div>
       <div class="browse-one-content">
-        <p>Restaurants</p>
-        <img src="" alt="Restaurant Picture" />
+        <h2>Restaurants</h2>
+        <img src="./images/food.jpg" alt="Restaurant Picture" width="150" />
       </div>
       <div class="browse-one-content">
-        <p>Tickets</p>
-        <img src="" alt="Tickets Picture" />
+        <h2>Tickets</h2>
+        <img src="./images/tickets.jpg" alt="Tickets Picture" width="150" />
       </div>
       <div class="browse-one-content">
-        <p>Schedule</p>
-        <img src="" alt="Theme Park Picture" />
+        <h2>Schedule</h2>
+        <img src="./images/coaster.jpg" alt="Theme Park Picture" width="150" />
       </div>
     </article>
     <article id="browse-two">
       <div class="browse-two-content">
-        <p>Rides</p>
-        <img src="" alt="Rides Picture" />
+        <h2>Rides</h2>
+        <img src="./images/coaster.jpg" alt="Rides Picture" width="200" />
       </div>
       <div class="browse-two-content">
-        <p>Events</p>
-        <img src="" alt="Events Picture" />
+        <h2>Events</h2>
+        <img src="./images/firework.jpg" alt="Events Picture" width="200" />
       </div>
       <div class="browse-two-content">
-        <p>Restaurants</p>
-        <img src="" alt="Restaurant Picture" />
+        <h2>Restaurants</h2>
+        <img src="./images/food.jpg" width="200" alt="Restaurant Picture" />
       </div>
     </article>
     <nav>
