--- a/tickets.html
+++ b/tickets.html
@@ -35,14 +35,14 @@
     </nav>
     <div class="directory">
       <a href="index.html">Home</a>
-      <a href="Explore.html">Explore</a>
+      <a href="explore.html">Explore</a>
     </div>
     <!-- Add the header to the page -->
     <header>
       <h1>Superhero Theme park tickets</h1>
     </header>
     <!-- Start to list out the ticket types -->
-    <section>
+    <div>
       <!-- Adult Tickets -->
       <article class="ticket">
         <div class="ticket_logo"><h3>Adult</h3></div>
@@ -95,7 +95,7 @@
           </div>
         </div>
       </article>
-    </section>
+    </div>
     <!-- Add a navigation bar to the bottom of the page to help customers navigate -->
     <nav>
       <div class="nav-text">
