--- a/Explore.html
+++ b/Explore.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>Superhero Theme Park - Explore</title>
     <meta charset="UTF-8" />
@@ -9,12 +10,12 @@
       name="keywords"
       content="Super Hero Theme Park, Theme Park, Super Hero, Rides, Roller Coaster"
     />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <nav>
       <div id="logo-cart"><p>Logo</p></div>
-      <div id="nav-text">
+      <div class="nav-text">
         <p>Navigation bar</p>
       </div>
     </nav>
@@ -23,36 +24,38 @@
       <a href="tickets.html">Tickets</a>
     </div>
     <header>
-      <h1>Superhero Theme park Explore</h1>
+      <h2>Superhero Theme park Explore</h2>
     </header>
-    <section>
-      <article id="Explore">Superhero rides</article>
-      <article id="Explore">
-        Show Times
+    <div>
+      <article class="explore"><h2>Superhero rides</h2></article>
+      <article class="explore">
+        <h2>Show Times</h2>
       </article>
-      <article id="Explore">
-        Restaurants
+      <article class="explore">
+        <h2>
+          Restaurants
+        </h2>
       </article>
-      <article id="Explore">
-        Shops
+      <article class="explore">
+        <h2>Shops</h2>
       </article>
-    </section>
-    <section>
-      <article id="Exploretitle">
-        <div id="Title">Title</div>
-        <div id="Information">Information</div>
-        <div id="Title">Title</div>
-        <div id="Information">Information</div>
-        <div id="Title">Title</div>
-        <div id="Information">Information</div>
-        <div id="Title">Title</div>
-        <div id="Information">Information</div>
-        <div id="Title">Title</div>
-        <div id="Information">Information</div>
-      </article>
-    </section>
+    </div>
+    <div>
+      <div id="Exploretitle">
+        <div class="Title">Title</div>
+        <div class="Information">Information</div>
+        <div class="Title">Title</div>
+        <div class="Information">Information</div>
+        <div class="Title">Title</div>
+        <div class="Information">Information</div>
+        <div class="Title">Title</div>
+        <div class="Information">Information</div>
+        <div class="Title">Title</div>
+        <div class="Information">Information</div>
+      </div>
+    </div>
     <nav>
-      <div id="nav-text">
+      <div class="nav-text">
         <p>Navigation Bar</p>
       </div>
     </nav>
