--- a/Explore.html
+++ b/Explore.html
@@ -10,7 +10,7 @@
       name="keywords"
       content="Super Hero Theme Park, Theme Park, Super Hero, Rides, Roller Coaster"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <nav>
@@ -20,13 +20,13 @@
       </div>
     </nav>
     <div class="directory">
-      <a href="./index.html">Home</a>
       <a href="tickets.html">Tickets</a>
+      <a href="explore.html">Explore</a>
     </div>
     <header>
       <h2>Superhero Theme park Explore</h2>
     </header>
-    <div>
+    <div class="directory1">
       <article class="explore"><h2>Superhero rides</h2></article>
       <article class="explore">
         <h2>Show Times</h2>
