--- a/Explore.html
+++ b/Explore.html
@@ -25,6 +25,7 @@
     </div>
     <header>
       <h2>Superhero Theme park Explore</h2>
+      <!-- title -->
     </header>
     <div class="directory1">
       <article class="explore"><h2>Superhero rides</h2></article>
